added bug net (missing tooltip tho)